--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.1/animate.compat.min.css" rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -16,4 +17,3 @@
     <script src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=ggeG9Ii3jcwnXUvVXNQ6vjRYUXV5Ckhz"></script>
   </body>
 </html>
-
