--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=ggeG9Ii3jcwnXUvVXNQ6vjRYUXV5Ckhz"></script>
+    <script src="https://unpkg.com/mapvgl/dist/mapvgl.min.js"></script>
   </body>
 </html>
