2021年06月12日 add 图表

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,6 @@
     <!-- built files will be auto injected -->
     <script src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=ggeG9Ii3jcwnXUvVXNQ6vjRYUXV5Ckhz"></script>
     <script src="https://unpkg.com/mapvgl/dist/mapvgl.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
+    <!--  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script> -->
   </body>
 </html>
