add chang and add

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -15,7 +14,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=ggeG9Ii3jcwnXUvVXNQ6vjRYUXV5Ckhz"></script>
-    <script src="https://unpkg.com/mapvgl/dist/mapvgl.min.js"></script>
-    <!--  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script> -->
+    <script src="//unpkg.com/mapvgl/dist/mapvgl.min.js"></script>
   </body>
 </html>
