2021年11月27 编不下去了

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script src="https://cdn.bootcdn.net/ajax/libs/echarts/5.1.2/echarts.min.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.js"></script>
   </head>
   <body>
     <noscript>
@@ -14,7 +17,5 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=ggeG9Ii3jcwnXUvVXNQ6vjRYUXV5Ckhz"></script>
-    <script src="//unpkg.com/mapvgl/dist/mapvgl.min.js"></script>
   </body>
 </html>
